# 2d-Irregular-Packing

./: CMakeLists.txt  README.md  dataloader.cpp  dataloader.h  datawrite.cpp  datawrite.h  geometry.cpp  geometry.h  main.cpp  nest.h  nfp.h  nofitpolygon.cpp  nofitpolygon.h  packing.cpp  packing.h  parameters.h  piece.cpp  piece.h  plot.cpp  plot.h  vector.cpp  vector.h
clipper/: CMakeLists.txt
clipper/include/: clipper.hpp
clipper/src/: clipper.cpp
libnfporb-master/src/: geometry.hpp
libnfporb-master/src/algo/: slide.hpp  touching_point.hpp
